[project]
name = "ha-arpae-weather"
version = "0.1.0"
description = "Home Assistant custom integration for ARPAE weather forecasts and alerts"
requires-python = ">=3.14.2"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-homeassistant-custom-component>=0.13.200",
  "homeassistant==2026.6.0",
  "aiohttp>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
